Corrected invalid vertical alignment for superscript

--- a/Css/Thrak.css
+++ b/Css/Thrak.css
@@ -288,7 +288,6 @@ input
    	display				:  inline ;
    	color				:  #0000FF ;
    	font-size			:  10px ;
-   	vertical-align			:  top ;
    	font-style			:  italic ;
     }
 
